; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/mac/extr_misc.c_mac_poweroff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/m68k/mac/extr_misc.c_mac_poweroff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@oss_present = common dso_local global i64 0, align 8
@macintosh_config = common dso_local global %struct.TYPE_2__* null, align 8
@MAC_ADB_II = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [44 x i8] c"It is now safe to turn off your Macintosh.\0A\00", align 1
@MAC_ADB_CUDA = common dso_local global i64 0, align 8
@MAC_ADB_PB1 = common dso_local global i64 0, align 8
@MAC_ADB_PB2 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_poweroff() #0 {
  %1 = load i64, i64* @oss_present, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @oss_shutdown()
  br label %14

5:                                                ; preds = %0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @macintosh_config, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @MAC_ADB_II, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %5
  %12 = call i32 (...) @via_shutdown()
  br label %13

13:                                               ; preds = %11, %5
  br label %14

14:                                               ; preds = %13, %3
  %15 = call i32 (...) @local_irq_enable()
  %16 = call i32 @printk(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %14, %17
  br label %17
}

declare dso_local i32 @oss_shutdown(...) #1

declare dso_local i32 @via_shutdown(...) #1

declare dso_local i32 @local_irq_enable(...) #1

declare dso_local i32 @printk(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
